@@ -29,6 +29,7 @@
  */
 package org.openjfx.gradle;
 
+import org.gradle.api.Project;
 import org.gradle.testfixtures.ProjectBuilder;
 import org.gradle.testkit.runner.BuildResult;
 import org.gradle.testkit.runner.GradleRunner;
@@ -36,9 +37,13 @@ import org.gradle.testkit.runner.TaskOutcome;
 import org.junit.jupiter.api.Test;
 
 import java.io.File;
+import java.io.FileOutputStream;
+import java.io.IOException;
+import java.io.OutputStream;
 import java.lang.management.ManagementFactory;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Properties;
 import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -48,7 +53,7 @@ abstract class JavaFXPluginSmokeTest {
     private static final String classifier;
 
     static {
-        var p = ProjectBuilder.builder().build();
+        Project p = ProjectBuilder.builder().build();
         p.getPlugins().apply(JavaFXPlugin.class);
         classifier = p.getExtensions().getByType(JavaFXOptions.class).getPlatform().getClassifier();
     }
@@ -61,60 +66,60 @@ abstract class JavaFXPluginSmokeTest {
 
     @Test
     void smokeTestModular() {
-        var result = build(":modular:run");
+        BuildResult result = buildWithJava11(":modular:run");
 
         assertEquals(TaskOutcome.SUCCESS, result.task(":modular:run").getOutcome());
 
-        assertEquals(List.of("javafx-base-17-" + classifier + ".jar", "javafx-controls-17-" + classifier + ".jar", "javafx-graphics-17-" + classifier + ".jar"), modulePath(result).get(0));
-        assertEquals(List.of("javafx-base-17-" + classifier + ".jar", "javafx-controls-17-" + classifier + ".jar", "javafx-graphics-17-" + classifier + ".jar", "modular.jar"), modulePath(result).get(1));
+        assertEquals(Arrays.asList("javafx-base-17-" + classifier + ".jar", "javafx-controls-17-" + classifier + ".jar", "javafx-graphics-17-" + classifier + ".jar"), modulePath(result).get(0));
+        assertEquals(Arrays.asList("javafx-base-17-" + classifier + ".jar", "javafx-controls-17-" + classifier + ".jar", "javafx-graphics-17-" + classifier + ".jar", "modular.jar"), modulePath(result).get(1));
 
-        assertEquals(List.of(), compileClassPath(result));
-        assertEquals(List.of(), runtimeClassPath(result));
+        assertEquals(Arrays.asList(), compileClassPath(result));
+        assertEquals(Arrays.asList(), runtimeClassPath(result));
     }
 
     @Test
     void smokeTestModularWithModularityPlugin() {
-        var result = build(":modular-with-modularity-plugin:run");
+        BuildResult result = buildWithJava11(":modular-with-modularity-plugin:run");
 
         assertEquals(TaskOutcome.SUCCESS, result.task(":modular-with-modularity-plugin:run").getOutcome());
 
-        assertEquals(List.of("javafx-base-17-" + classifier + ".jar", "javafx-controls-17-" + classifier + ".jar", "javafx-graphics-17-" + classifier + ".jar"), modulePath(result).get(0));
-        assertEquals(List.of("javafx-base-17-" + classifier + ".jar", "javafx-controls-17-" + classifier + ".jar", "javafx-graphics-17-" + classifier + ".jar", modularApplicationRuntime()), modulePath(result).get(1));
+        assertEquals(Arrays.asList("javafx-base-17-" + classifier + ".jar", "javafx-controls-17-" + classifier + ".jar", "javafx-graphics-17-" + classifier + ".jar"), modulePath(result).get(0));
+        assertEquals(Arrays.asList("javafx-base-17-" + classifier + ".jar", "javafx-controls-17-" + classifier + ".jar", "javafx-graphics-17-" + classifier + ".jar", modularApplicationRuntime()), modulePath(result).get(1));
 
-        assertEquals(List.of(), compileClassPath(result));
-        assertEquals(List.of(), runtimeClassPath(result));
+        assertEquals(Arrays.asList(), compileClassPath(result));
+        assertEquals(Arrays.asList(), runtimeClassPath(result));
     }
 
     @Test
     void smokeTestNonModular() {
-        var result = build(":non-modular:run");
+        BuildResult result = buildWithJava11(":non-modular:run");
 
         assertEquals(TaskOutcome.SUCCESS, result.task(":non-modular:run").getOutcome());
 
-        assertEquals(List.of("javafx-base-17-" + classifier + ".jar", "javafx-controls-17-" + classifier + ".jar", "javafx-graphics-17-" + classifier + ".jar", "javafx-media-17-" + classifier + ".jar", "javafx-web-17-" + classifier + ".jar"), compileClassPath(result).get(0));
-        assertEquals(List.of("main", "main"), runtimeClassPath(result).get(0));
-        assertEquals(List.of("javafx-base-17-" + classifier + ".jar", "javafx-controls-17-" + classifier + ".jar", "javafx-graphics-17-" + classifier + ".jar", "javafx-media-17-" + classifier + ".jar", "javafx-web-17-" + classifier + ".jar"), modulePath(result).get(0));
+        assertEquals(Arrays.asList("javafx-base-17-" + classifier + ".jar", "javafx-controls-17-" + classifier + ".jar", "javafx-graphics-17-" + classifier + ".jar", "javafx-media-17-" + classifier + ".jar", "javafx-web-17-" + classifier + ".jar"), compileClassPath(result).get(0));
+        assertEquals(Arrays.asList("main", "main"), runtimeClassPath(result).get(0));
+        assertEquals(Arrays.asList("javafx-base-17-" + classifier + ".jar", "javafx-controls-17-" + classifier + ".jar", "javafx-graphics-17-" + classifier + ".jar", "javafx-media-17-" + classifier + ".jar", "javafx-web-17-" + classifier + ".jar"), modulePath(result).get(0));
     }
 
     @Test
     void smokeTestTransitive() {
-        var result = build(":transitive:run");
+        BuildResult result = buildWithJava11(":transitive:run");
 
         assertEquals(TaskOutcome.SUCCESS, result.task(":transitive:run").getOutcome());
 
-        assertEquals(List.of("charts-17.1.41.jar", "javafx-base-17-" + classifier + ".jar", "javafx-controls-17-" + classifier + ".jar", "javafx-graphics-17-" + classifier + ".jar"), compileClassPath(result).get(0));
-        assertEquals(List.of("charts-17.1.41.jar", "countries-17.0.29.jar", "heatmap-17.0.17.jar", "logback-classic-1.2.6.jar", "logback-core-1.2.6.jar", "main", "main", "slf4j-api-1.7.32.jar", "toolbox-17.0.45.jar", "toolboxfx-17.0.37.jar"), runtimeClassPath(result).get(0));
-        assertEquals(List.of("javafx-base-17.0.6-" + classifier + ".jar", "javafx-controls-17.0.6-" + classifier + ".jar", "javafx-graphics-17.0.6-" + classifier + ".jar", "javafx-swing-17.0.6-" + classifier + ".jar"), modulePath(result).get(0));
+        assertEquals(Arrays.asList("charts-17.1.41.jar", "javafx-base-17-" + classifier + ".jar", "javafx-controls-17-" + classifier + ".jar", "javafx-graphics-17-" + classifier + ".jar"), compileClassPath(result).get(0));
+        assertEquals(Arrays.asList("charts-17.1.41.jar", "countries-17.0.29.jar", "heatmap-17.0.17.jar", "logback-classic-1.2.6.jar", "logback-core-1.2.6.jar", "main", "main", "slf4j-api-1.7.32.jar", "toolbox-17.0.45.jar", "toolboxfx-17.0.37.jar"), runtimeClassPath(result).get(0));
+        assertEquals(Arrays.asList("javafx-base-17.0.6-" + classifier + ".jar", "javafx-controls-17.0.6-" + classifier + ".jar", "javafx-graphics-17.0.6-" + classifier + ".jar", "javafx-swing-17.0.6-" + classifier + ".jar"), modulePath(result).get(0));
     }
 
     @Test
     void smokeTestLocalSdk() {
-        var result = build(":local-sdk:build"); // do not ':run', as it won't run on any platform
+        BuildResult result = buildWithJava11(":local-sdk:build"); // do not ':run', as it won't run on any platform
 
         assertEquals(TaskOutcome.SUCCESS, result.task(":local-sdk:build").getOutcome());
 
-        assertEquals(List.of("javafx.base.jar", "javafx.controls.jar", "javafx.graphics.jar"), compileClassPath(result).get(0));
-        assertEquals(List.of(), modulePath(result));
+        assertEquals(Arrays.asList("javafx.base.jar", "javafx.controls.jar", "javafx.graphics.jar"), compileClassPath(result).get(0));
+        assertEquals(Arrays.asList(), modulePath(result));
     }
 
     private static List<List<String>> modulePath(BuildResult result) {
@@ -132,11 +137,11 @@ abstract class JavaFXPluginSmokeTest {
     private static List<List<String>> path(BuildResult result, String pathArg) {
         // Parse classpath or module path from Gradle's '--debug' output.
         // The :compileJava and :run tasks log them on that logging level.
-        return result.getOutput().lines().filter(l -> l.contains(pathArg)).map(l -> {
+        return Arrays.stream(result.getOutput().split("\r?\n|\r")).filter(l -> l.contains(pathArg)).map(l -> {
             int pathArgIndex = l.indexOf(pathArg)  + pathArg.length();
             String pathString = l.substring(pathArgIndex, l.indexOf(" ", pathArgIndex));
-            if (pathString.isBlank()) {
-                return List.<String>of();
+            if (pathString.trim().isEmpty()) {
+                return Arrays.<String>asList();
             }
             String[] path = pathString.split(System.getProperty("path.separator"));
             return Arrays.stream(path).map(jar -> new File(jar).getName()).sorted().collect(Collectors.toList());
@@ -144,6 +149,21 @@ abstract class JavaFXPluginSmokeTest {
     }
 
     private BuildResult build(String task) {
+        return build(task, new Properties());
+    }
+
+    private BuildResult buildWithJava11(String task) {
+        Properties gradleProperties = new Properties();
+        gradleProperties.setProperty("org.gradle.java.home", System.getProperty("java11Home"));
+        return build(task, gradleProperties);
+    }
+
+    private BuildResult build(String task, Properties gradleProperties) {
+        try (OutputStream out = new FileOutputStream("test-project/gradle.properties")) {
+            gradleProperties.store(out, null);
+        } catch (IOException ioe) {
+            throw new RuntimeException(ioe);
+        }
         return GradleRunner.create()
                 .withProjectDir(new File("test-project"))
                 .withGradleVersion(getGradleVersion())
